# pyNuMAD

./: .gitignore  MANIFEST.in  NOTICE  README.md  docs.logconda  noxfile.py  pyproject.toml  software_paths.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  publish.yml  pypi_publish.yml  test.yml
docs/: Makefile  beam_models.rst  citation.rst  compare_in_house_vs_cubit.csv  conf.py  contributing.rst  cs_params_dict.csv  getting-started.rst  index.rst  installation.rst  license.rst  meshing.rst  overview.rst  publications.rst  reference.rst  release-notes.rst  settings_dict.csv  shell_models.rst  soild_models.rst  solid_models.rst
docs/_user/: conclusion.rst
docs/_user/userguide/: conclusion.rst
docs/apidoc/: pynumad.analysis.ansys.rst  pynumad.analysis.cubit.rst  pynumad.graphics.rst  pynumad.io.rst  pynumad.objects.airfoil.rst  pynumad.objects.blade.rst  pynumad.objects.bom.rst  pynumad.objects.component.rst  pynumad.objects.definition.rst  pynumad.objects.geometry.rst  pynumad.objects.keypoints.rst  pynumad.objects.material.rst  pynumad.objects.materialdb.rst  pynumad.objects.rst  pynumad.objects.stackdb.rst  pynumad.rst  pynumad.utils.rst
docs/refs/: publications.bib
docs/user-guide/: blade_definition.rst  fea.rst  getting-started.rst  index.rst  installation.rst  meshing.rst  overview.rst  running_numad.rst  shell_models.rst  solid_models.rst  terminology.rst
docs/userguide/: getting_started.rst
examples/: ansys_example.py  buildIEA15InsertsRoot.py  buildIEA15TubeRoot.py  cubit_beam.py  cubit_example.py  cubit_solid.py  develop_bom.py  get_damping_factors.py  gettingstarted.ipynb  plot_blade.py  readyaml_buildmesh.py  sd_myBlade_Modified.i  sm_myBlade_Modified.i  write_abacus_shell_model.py  write_abacus_solid_model.py  write_abaqus_shell_model.py  write_abaqus_solid_model.py  write_ansys_shell_model.py
examples/ansys_analysis/: ansys_analysis.py
examples/example_data/: BAR0_5MW.yaml  IEA-15-240-RWT_windIO2.yaml  IEA-15MW_modified.yaml  IEA-22-280-RWT.yaml  V27_fromScan.yaml
pynumad/analysis/: makeModels.py  make_models.py
pynumad/analysis/cubit/: cubitBlade.py  cubitUtils.py  solidModelUtils.py  solid_model_utils.py  utils.py
pynumad/io/: yaml_to_blade.py
pynumad/utils/: misc_utils.py
src/data/templates/: mat_ori.py.template  sm.i.template
src/pynumad/: __init__.py  paths.py  software_paths.json
src/pynumad/analysis/: __init__.py  beamUtils.py  beam_utils.py  makeModels.py  make_models.py
src/pynumad/graphics/: __init__.py  graphics.py
src/pynumad/io/: __init__.py  airfoil_to_xml.py  excel_to_blade.py  mesh_to_yaml.py  old.py  xml_to_airfoil.py  yaml_to_blade.py  yaml_to_blade_v2.py
src/pynumad/mesh/: boundary2d.py  mesh2d.py  mesh3d.py  meshtools.py  shell.py  shellregion.py  surface.py
src/pynumad/mesh_gen/: __init__.py.bak  boundary2d.py  element_utils.py  mesh2d.py  mesh3d.py  mesh_gen.py  mesh_tools.py  (+4 more)
tests/: test_airfoil.py
(+79 files in other folders)
