[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyNuMAD"
description = "Numerical Manufacturing and Design Tool"
readme = "README.md"
version = "0.0.1"
authors = [
  { name = "Kirk Bonney", email = "klbonne@sandia.gov" },
]
maintainers = [
  { name = "Kirk Bonney", email = "klbonne@sandia.gov" },
]
requires-python = ">=3.8"

dependencies = [
    "numpy", 
    "scipy", 
    "pandas", 
    "matplotlib", 
    "pyyaml", 
    "plotly", 
    "openpyxl",
    ]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
test = [
  "pytest >=6.0",
]
# doc = [
#   "matplotlib >=2.0",
# ]

[tool.black]
line-length = 140

[project.urls]
Homepage = "https://github.com/sandialabs/pynumad"
# Documentation = "https://package.readthedocs.io/"
# "Bug Tracker" = "https://github.com/organization/package/issues"
# Discussions = "https://github.com/organization/package/discussions"
# Changelog = "https://package.readthedocs.io/en/latest/changelog.html"